<resources>
    <string name="app_name">TETRIS</string>
    <string name="tetris">TETRIS</string>
    <string name="High_score">High score: 1000 </string>
    <string name="now_game">New Game</string>
    <string name="reset_score">Reset score</string>
    <string name="exit">Exit</string>
    <string name="current_score">Current Score</string>
    <string name="high_score">High Score</string>
    <string name="btn_restart">Restart</string>
</resources>